# mr-mpi-blast

./: .gitignore  COPYING  HISTORY  LICENSE  Makefile.in  Makefile.mrblast.app  Makefile.mrblast_install.in  README  USERGUIDE  blast_app_util.cpp  blast_app_util.hpp  build_conffile.sh  build_mrmpi.sh  mrblast.conf  mrblast.cpp  mrblast.hpp  mrblast.ini  rsync_mrblast.sh
.#SRC-cache/: Makefile.mrblast.app
build_mrmpi/: README  build_mrmpi.sh
conf/: ConfigFile.cpp  ConfigFile.d  ConfigFile.h  Makefile.common
data/: 10seqs.query.def  10seqs.query.idx  10seqs.query.idx3  32seqs.query  32seqs.query.def  32seqs.query.idx  32seqs.query.idx2  32seqs.query.idx3  800seqs.query  800seqs.query.def  800seqs.query.idx  800seqs.query.idx2  800seqs.query.idx3  README  dbchunks.txt  dbchunks_refseq.txt  mrblast.ini  mrblast.ini_for_generic_version  option.out
doc/: BUILD  HOWTOBUILD  USERGUIDE
docs/: USERGUIDE
examples/: 1.indexing_30_real_seqs.sh  2.indexing_100_simul_seqs.sh  3.makeblastdb.sh  4.run_mrblast_30_real.sh  5.run_mrblast_100_simul.sh  README  mrblast.ini  mrblast_30_real.ini
mrmpi/: .gitignore  Makefile  Makefile.mpicc  Makefile.mvapich  README  VERSION  cmapreduce.d  cmapreduce.h  error.d  hash.d  (+11 more)
tools/seqindexer/: .gitignore  CMakeLists.txt  README  seqindexer.c  seqindexer.py  seqindexer2.py  seqindexer_generic.py
tools/seqindexer/data/: 100.query  100.query.def  100.query.idx  10seqs.query  test.out  test.query.def
tools/seqindexer/examples/: 100.query  100.query.def  100.query.idx  10seqs.query.def  10seqs.query.idx  README  test.query.idx  test.sh
(+850 files in other folders)
